:wrench::construction: fixes excess spacing in mobile layout

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,15 +5,23 @@ $main-color: blue
 h1
   font: 150% $font-stack
   color: $main-color
+  text-shadow: 2px 2px 2px rgba(0,200,255,0.5)
+  text-shadow: 2px -2px 2px rgba(0,200,255,0.5)
+  text-shadow: -2px 2px 2px rgba(0,200,255,0.5)
+  text-shadow: -2px -2px 2px rgba(0,200,255,0.5)
+
 h2
     font: 100% $font-stack
-.main_img
-  max-width: 20vw
-  max-height: 30vh
-  border-color: maroon
-  border-width: 1px
+
+.app-marquee
+    text-align: center
+    background-image: url("../assets/fwt_logo_40_clear.png")
+
 .header_icon
   width: 28px
 
 header
    @include linear-gradient(to top, chocolate, papayawhip)
+
+.app-itself
+    text-align: center
