--- a/src/app/hero-list.component.sass
+++ b/src/app/hero-list.component.sass
@@ -8,9 +8,7 @@
     border-style: groove
     margin: 0px
     background: blanchedalmond
-    width: 100%
-.partyrow
-    height: 20%
+
 .sort-btn-color
     background: blanchedalmond
 
